# loupe

./: .editorconfig  .gitattributes  .gitignore  .jscpd.json  CLAUDE.md  README.md  biome.json  commitlint.config.js  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sheriff.config.ts  sonar-project.properties  stryker.config.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  pre-commit
docs/: STATUS.md  beta-checklist.md  chord-charts-plan.md  client-leger-plan.md  docs.spec.ts  j2-supabase-runbook.md  jalon-1-plan.md  jalon-2-plan.md  lead-sheet-chart-plan.md  modal-offload-impl-plan.md  roadmap-excellence-2.md  roadmap-excellence-3.md  roadmap-excellence-4.md  roadmap-excellence-5.md  roadmap-excellence-6.md  (+6 more)
server/: .gitignore  MODAL_SPIKE.md  README.md  modal_app.py  modal_separation_spike.py  modal_structure_spike.py  pyproject.toml  requirements-dev.txt  requirements.txt
server/app/: analyze_auth.py  analyze_gate.py  api_docs.py  beat_positions.py  btc_windows.py  chord_spans.py  chords.py  download.py  limits.py  main.py  netguard.py  origins.py  projects.py  separation.py  stem_manifest.py  stems_store.py  structure.py  structure_chunks.py  structure_segments.py  tempo.py  warm.py  wav_decode.py  weights_cache.py
server/app/btc/: __init__.py  btc_model.py  transformer_modules.py
server/app/songformer/: VENDORING.md  inference.py
server/app/songformer/models/: SongFormer.py
server/app/songformer/muq/: __init__.py
server/tests/: analyze_token_kit.py  conftest.py  test_analyze_auth.py  test_analyze_gate.py  test_beat_positions.py  test_btc_windows.py  test_chord_spans.py  test_cors_and_host.py  test_download_no_runtime_pip.py  test_download_progress.py  test_download_stream.py  test_limits.py  test_main_fallbacks.py  test_netguard.py  test_origin_guard.py  test_origins.py  test_projects_api.py  test_projects_gc.py  test_stem_manifest.py  test_stems_store.py  test_structure_chunks.py  test_structure_segments.py  test_warm.py  test_wav_decode.py  test_weights_cache.py
(+254 files in other folders)
