[project]
name = "loupe-server"
version = "0.0.0"
description = "loupe's standalone FastAPI backend (storage + separation/tempo/download)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored model code is kept verbatim (checkpoint compatibility) — neither
# linted nor formatted to our style.
extend-exclude = ["app/btc", "app/songformer"]

[tool.ruff.lint]
# A pragmatic set: pyflakes + pycodestyle + import order + bugbear + comprehensions
# + pyupgrade + simplify. The server is an adapter (I/O glue), so we keep it
# strict on correctness/imports without pulling in docstring/annotation churn.
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests reach into private helpers and monkeypatch internals on purpose.
"tests/*" = ["SLF001"]

[tool.pyright]
include = ["app"]
# separation.py / tempo.py / chords.py / structure.py (+ the vendored btc /
# songformer trees) are the torch/librosa humble objects; they import the heavy
# ML stack that CI deliberately doesn't install, so they're type-checked
# manually rather than in the torch-free CI. Everything decidable lives elsewhere.
exclude = [
    "app/separation.py",
    "app/tempo.py",
    "app/chords.py",
    "app/btc",
    "app/structure.py",
    "app/songformer",
    "**/.venv",
]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
# torch / demucs / librosa / yt_dlp ship partial or no stubs; don't fail on them.
reportMissingModuleSource = false

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
# Omit the ML humble objects: their inference/DSP paths are covered manually, and
# they aren't even imported in the torch-free test run — measuring them would make
# coverage depend on whether torch happens to be installed.
omit = [
    "tests/*",
    "app/separation.py",
    "app/tempo.py",
    "app/chords.py",
    "app/btc/*",
    "app/structure.py",
    "app/songformer/*",
]
